<resources>
    <string name="app_name">ProcessScheduleSimulation</string>
    <string name="title_rr">时间片轮转</string>
    <string name="title_fcfs">先来先服务</string>
    <string name="title_spf">优先级</string>
    <string name="lable_algorithm">算&#160; &#160; 法:</string>
    <string name="rr_algorithm">时间片轮转算法</string>
    <string name="lable_runtimeAll">已运行:</string>
    <string name="runtimeAll">0 秒</string>
    <string name="lable_slot">时间片:</string>
    <string name="unit">(单位:秒)</string>
    <string name="chart">图表</string>
    <string name="reset">重置</string>
    <string name="add">添加进程</string>
    <string name="start">开始</string>
    <!--RR   listTitle-->
    <string name="title_proccess">进程名</string>
    <string name="title_processTime">进程时间</string>
    <string name="title_IOtime">IO时间</string>
    <string name="title_CPU">CPU</string>
    <string name="title_IO">IO</string>
    <string name="title_total">结束时间</string>
    <string name="title_state">状态</string>
    <!--RR   add-->
    <string name="title_content">输入进程信息</string>
    <string name="tv_add_name">进  程  名:</string>
    <string name="tv_add_needtime">运行时间:</string>
    <string name="tv_add_startTime">开始时间:</string>
    <string name="tv_add_IOstart">IO开始时间</string>
    <string name="tv_add_IOlast">IO持续时间</string>
    <string name="btn_add">添加</string>
    <string name="cancel">取消</string>


</resources>
