<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7" >

        <TextView
            android:id="@+id/tv_namerr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_proccess" />

        <TextView
            android:id="@+id/tv_processTimerr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:gravity="center"
            android:text="@string/title_processTime" />

        <TextView
            android:id="@+id/tv_IOtimerr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:gravity="center"
            android:text="@string/title_IOtime" />


        <TextView
            android:id="@+id/tv_CPUrr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="center"
            android:text="@string/title_CPU" />

        <TextView
            android:id="@+id/tv_IOrr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:gravity="center"
            android:text="@string/title_IO" />

        <TextView
            android:id="@+id/tv_totalrr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:gravity="center"
            android:text="@string/title_total" />

        <TextView
            android:id="@+id/tv_staterr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_state" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>