<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/lable1rr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/lable_algorithm"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_dispatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_toRightOf="@id/lable1rr"
            android:text="@string/rr_algorithm"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/label2rr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/lable1rr"
            android:layout_centerVertical="true"
            android:text="@string/lable_runtimeAll"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_runtimerr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/label2rr"
            android:layout_alignBottom="@id/label2rr"
            android:textSize="18sp"
            android:text="@string/runtimeAll"/>


        <LinearLayout
            android:id="@+id/layoutrr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label2rr"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lable_slot"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/et_slotrr"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="18sp"
                android:enabled="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_chartrr"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_login_selector"
            android:text="@string/chart"
            android:textColor="#ffffff"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btn_resetrr"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/btn_chartrr"
            android:background="@drawable/btn_login_selector"
            android:text="@string/reset"
            android:textColor="#ffffff"
            android:textSize="16sp"/>

    </RelativeLayout>

    <include
        layout="@layout/list_title_rr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ListView
        android:id="@+id/lv_process_rr"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/btn_addrr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_login_selector"
            android:text="@string/add"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_startrr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/btn_login_selector"
            android:text="@string/start"
            android:textColor="#ffffff"
            android:textSize="16sp"/>

    </LinearLayout>
</LinearLayout>