<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_dialog_namerr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_add_name"/>

        <EditText
            android:id="@+id/et_dialog_namerr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_dialog_needtimerr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_dialog_namerr"
            android:text="@string/tv_add_needtime"/>

        <EditText
            android:id="@+id/et_dialog_needtimerr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_dialog_startTimerr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_dialog_needtimerr"
            android:text="@string/tv_add_startTime"/>

        <EditText
            android:id="@+id/et_dialog_startTimerr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_dialog_IOstartrr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_dialog_startTimerr"
            android:text="@string/tv_add_IOstart"/>

        <EditText
            android:id="@+id/et_dialog_IOstartrr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(单位:秒)"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_dialog_IOlastrr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_dialog_IOstartrr"
            android:text="@string/tv_add_IOlast"/>

        <EditText
            android:id="@+id/et_dialog_IOlastrr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:id="@+id/btn_dialog_surerr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@id/tv_dialog_IOlastrr"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_login_selector"
        android:text="@string/btn_add"
        android:textSize="16sp"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/btn_dialog_cancelrr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_login_selector"
        android:text="@string/cancel"
        android:textSize="16sp"
        android:textColor="#ffffff"/>

    </LinearLayout>

</LinearLayout>